add some useful metadata to each docker log event

--- a/td-agent.conf
+++ b/td-agent.conf
@@ -5,10 +5,22 @@
   path /var/lib/docker/containers/*/*-json.log
   pos_file /var/lib/docker/containers/containers.log.pos
   time_format %Y-%m-%dT%H:%M:%S
-  tag docker.container.*
+  tag docker.*
 </source>
 
-<match docker.container.**>
+<match docker.var.lib.docker.containers.*.*.log>
+  type record_reformer
+  enable_ruby false
+  remove_keys log
+  <record>
+    container_id ${tag_parts[5]}
+    host ${hostname}
+    message ${log}
+  </record>
+  tag docker.all
+</match>
+
+<match docker.all>
    type elasticsearch
    log_level info
    include_tag_key true
